Fixed dark mode screenshot

--- a/src/components/Calendar/calendar.css
+++ b/src/components/Calendar/calendar.css
@@ -6,6 +6,14 @@
     justify-content: center;
 }
 
+.rbc-header.dark-mode {
+    border-bottom: none;
+    color: white;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .rbc-header + .rbc-header {
     border: none;
 }
@@ -34,6 +42,11 @@
 
 .rbc-label {
     font-size: 0.9rem;
+}
+
+.rbc-label.dark-mode {
+    font-size: 0.9rem;
+    color: white;
 }
 
 @media (min-resolution: 96dpi) {
